starstream-compiler/src/snapshots/starstream_compiler__formatter__tests__comments_on_enum_variants.snap
---
source: starstream-compiler/src/formatter.rs
description: "Code:\n\nenum Status {\n    /// Currently running\n    Active,\n    /// Not running\n    Inactive,\n}\n"
---
enum Status {
    /// Currently running
    Active,
    /// Not running
    Inactive,
}
