starstream-compiler/src/snapshots/starstream_compiler__formatter__tests__contract_before_imports.snap
---
source: starstream-compiler/src/formatter.rs
description: "Code:\n\nimport { x } from \"./util.star\";\ncontract;\nfn run() { }\n"
---
contract;

import { x } from "./util.star";

fn run() { }
