starstream-compiler/src/snapshots/starstream_compiler__formatter__tests__contract_declaration_moves_to_top.snap
---
source: starstream-compiler/src/formatter.rs
description: "Code:\n\nfn helper() { }\n\ncontract;\n\nscript fn run() { }\n"
---
contract;

fn helper() { }

script fn run() { }
