starstream-compiler/src/snapshots/starstream_compiler__formatter__tests__doc_comment_on_enum.snap
---
source: starstream-compiler/src/formatter.rs
description: "Code:\n\n/// Represents a message type.\nenum Message {\n    Ping,\n    Pong,\n}\n\nfn main() {}\n"
---
/// Represents a message type.
enum Message {
    /// Represents a message type.
    Ping,
    Pong,
}

fn main() { }
