starstream-compiler/src/snapshots/starstream_compiler__formatter__tests__doc_comment_on_struct_with_field_comment.snap
---
source: starstream-compiler/src/formatter.rs
description: "Code:\n\n/// Yes more\nstruct Point {\n    // wow\n    x: i64,\n    y: i64,\n}\n"
---
/// Yes more
struct Point {
    // wow
    x: i64,
    y: i64,
}
