starstream-compiler/src/snapshots/starstream_compiler__formatter__tests__doc_comment_then_function.snap
---
source: starstream-compiler/src/formatter.rs
description: "Code:\n\n/// This is documentation\nfn foo() -> i64 {\n    1\n}\n\n/// More docs\nfn bar() -> i64 {\n    2\n}\n"
---
/// This is documentation
fn foo() -> i64 {
    1
}

/// More docs
fn bar() -> i64 {
    2
}
