starstream-compiler/src/snapshots/starstream_compiler__formatter__tests__enum_struct_variant_commas.snap
---
source: starstream-compiler/src/formatter.rs
assertion_line: 743
description: "Code:\n\nenum Message {\n    Ping,\n    Pong {\n        x: i64,\n        y: i64\n    }\n}\n"
---
enum Message {
    Ping,
    Pong { x: i64, y: i64 },
}
